feat: add more design and animation

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,2 +1,9 @@
 $light-gray: #b1b2b3;
+$input-color: #e6e6e6;
 $main-color: #ffcc00;
+$matte-blue-text: #8aa6cd;
+$matte-blue-background: #c1d7f5;
+$matte-pink-text: #ff5b7e;
+$matte-pink-background: #ed9fa8;
+$matte-orange-text: #ff8c00;
+$matte-orange-background: #fdbd6f;
