feat: completed lending for marathon

--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -59,6 +59,7 @@ main {
     font-family: "VAG-World", Arial, sans-serif;
     font-size: 3rem;
     line-height: 100%;
+    color: #111;
 
     @media screen and (max-width: 1000px) {
       font-size: 2.5rem;
