--- a/style/_about.scss
+++ b/style/_about.scss
@@ -25,7 +25,8 @@
   }
 
   &__info {
-    width: 45%;
+    //width: 45%;
+    width: 50%;
 
     @media screen and (max-width: 1000px) {
       width: 50%;
@@ -68,11 +69,13 @@
   &__title {
     margin-bottom: 35px;
     font-family: "VAG-World", Arial, sans-serif;
-    font-size: 4.5rem;
+    //font-size: 4.5rem;
+    font-size: 3.6rem;
     line-height: 140%;
 
     @media screen and (max-width: 1000px) {
-      font-size: 3.8rem;
+      //font-size: 3.8rem;
+      font-size: 2.7rem;
       line-height: 130%;
     }
 
@@ -83,8 +86,10 @@
 
     @media screen and (max-width: 414px) {
       left: 0;
-      max-width: 300px;
-      font-size: 7.5cqw;
+      max-width: 400px;
+      //font-size: 7.5cqw;
+      margin-bottom: 1cqw;
+      font-size: 6.5cqw;
     }
   }
 
@@ -139,6 +144,8 @@
       align-items: center;
       font-size: 1.6rem;
       color: #000;
+      background: #ffcc00;
+      transition: all 500ms ease-out;
 
       @media screen and (max-width: 1000px) {
         font-size: 1.4rem;
