--- a/style/_feedback.scss
+++ b/style/_feedback.scss
@@ -138,8 +138,8 @@
       border-radius: 50%;
 
       @media screen and (max-width: 414px) {
-        left: 44%;
-        top: calc(50% + 2px);
+        left: 43%;
+        top: calc(50% + 1px);
       }
     }
 
@@ -159,8 +159,8 @@
       cursor: pointer;
 
       @media screen and (max-width: 414px) {
-        left: 44%;
-        top: calc(50% + 2px);
+        left: 0;
+        top: 30%;
       }
     }
 
