--- a/style/_marathon.scss
+++ b/style/_marathon.scss
@@ -71,6 +71,7 @@
   }
 
   &__date {
+    position: relative;
     margin-bottom: 40px;
     padding: 1.5rem 4rem 2rem !important;
     min-width: 200px !important;
@@ -80,6 +81,19 @@
     font-size: 2.4rem;
     text-align: justify;
     color: #000000;
+
+    &::after {
+      @media screen and (max-width: 414px) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        border-radius: 35px;
+        animation: glowing 1300ms infinite;
+      }
+    }
 
     @media screen and (max-width: 1000px) {
       margin-bottom: 3cqw;
@@ -148,5 +162,15 @@
     @media screen and (max-width: 414px) {
       font-size: 1.1rem;
     }
+  }
+}
+
+@keyframes glowing {
+  0% {
+    box-shadow: 0 0 0 0px rgba(255, 204, 0, 0.5);
+  }
+
+  100% {
+    box-shadow: 0 0 0 10px rgba(255, 204, 0, 0);
   }
 }
