--- a/style/_about.scss
+++ b/style/_about.scss
@@ -2,15 +2,11 @@
   font-family: "Montserrat", Arial, sans-serif;
 
   @media screen and (max-width: 1000px) {
-    padding-top: 50px;
-  }
-
-  @media screen and (max-width: 767px) {
-    padding-top: 40px;
+    padding-top: 70px;
   }
 
   @media screen and (max-width: 414px) {
-    padding-top: 25px;
+    padding-top: 80px;
   }
 
   &__container {
@@ -25,8 +21,7 @@
   }
 
   &__info {
-    //width: 45%;
-    width: 50%;
+    width: 45%;
 
     @media screen and (max-width: 1000px) {
       width: 50%;
@@ -69,13 +64,11 @@
   &__title {
     margin-bottom: 35px;
     font-family: "VAG-World", Arial, sans-serif;
-    //font-size: 4.5rem;
-    font-size: 3.6rem;
+    font-size: 4.5rem;
     line-height: 140%;
 
     @media screen and (max-width: 1000px) {
-      //font-size: 3.8rem;
-      font-size: 2.7rem;
+      font-size: 3.8rem;
       line-height: 130%;
     }
 
@@ -87,9 +80,8 @@
     @media screen and (max-width: 414px) {
       left: 0;
       max-width: 400px;
-      //font-size: 7.5cqw;
+      font-size: 7.5cqw;
       margin-bottom: 1cqw;
-      font-size: 6.5cqw;
     }
   }
 
@@ -144,7 +136,6 @@
       align-items: center;
       font-size: 1.6rem;
       color: #000;
-      background: #ffcc00;
       transition: all 500ms ease-out;
 
       @media screen and (max-width: 1000px) {
@@ -155,5 +146,9 @@
         text-align: center;
       }
     }
+  }
+
+  &__btn-main {
+    background: #ffcc00;
   }
 }
