--- a/style/_choice.scss
+++ b/style/_choice.scss
@@ -86,6 +86,15 @@
     word-spacing: 2cqw;
     line-height: 100%;
     color: #000000;
+    transition: all 300ms ease-in-out;
+
+    &:hover {
+      box-shadow: 2px 2px 10px 5px rgba(220, 220, 220, 1);
+    }
+
+    &:active {
+      box-shadow: 0px 0px 6px 5px rgba(220, 220, 220, 0.9) inset;
+    }
 
     @media screen and (max-width: 1000px) {
       font-size: 2cqw;
