--- a/style/_global.scss
+++ b/style/_global.scss
@@ -48,6 +48,7 @@
 }
 
 .one-color-btn {
+  display: block;
   padding: 1.5rem 4rem;
   font-size: 2rem;
   border: none;
@@ -55,6 +56,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 40px;
   transition: box-shadow 200ms ease-in;
+  color: #333333;
 
   @media screen and (max-width: 414px) {
     font-size: 1.6rem;
@@ -78,6 +80,7 @@
     box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.25) inset;
   }
 }
+
 .btn-neo {
   display: inline-block;
   padding: 1.5rem 3rem;
@@ -86,6 +89,10 @@
   color: #333333;
   box-shadow: 14px 14px 30px #bababa, -14px -14px 30px #ffffff;
   transition: all 1500ms ease-out;
+
+  &--main-color {
+    background: #ffcc00;
+  }
 
   &:hover {
     background: linear-gradient(145deg, #d3d3d3, #fafafa);
