--- a/style/_test.scss
+++ b/style/_test.scss
@@ -71,6 +71,12 @@
     font-size: 18px;
     line-height: 22px;
     color: #000000;
+    transition: all 300ms ease-in;
+
+    &:hover {
+      background: #333333;
+      color: #ffffff;
+    }
 
     @media screen and (max-width: 1000px) {
       max-width: 42cqw;
