--- a/style/_about.scss
+++ b/style/_about.scss
@@ -133,6 +133,66 @@
     }
   }
 
+  &__price {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    font-family: "VAG-World", Arial, sans-serif;
+    font-size: 3rem;
+    line-height: 140%;
+    line-height: 100%;
+
+    @media screen and (max-width: 1200px) {
+      font-size: 2.6rem;
+      line-height: 130%;
+    }
+
+    @media screen and (max-width: 1000px) {
+      font-size: 2rem;
+      gap: 1rem;
+    }
+
+    @media screen and (max-width: 767px) {
+      margin-bottom: 2rem;
+    }
+
+    @media screen and (max-width: 414px) {
+      flex-direction: column;
+      max-width: 400px;
+      font-size: 6cqw;
+    }
+  }
+
+  .info__price-cost {
+    padding: 1rem 2.5rem 1.5rem;
+    font-size: 3rem;
+    line-height: 100%;
+    max-width: 35%;
+    min-width: 100px;
+    align-self: center;
+    text-align: center;
+
+    @media screen and (max-width: 1200px) {
+      font-size: 2.6rem;
+    }
+
+    @media screen and (max-width: 1000px) {
+      font-size: 1.8rem;
+      padding: 1rem 2rem 1.5rem;
+      margin-bottom: 0;
+    }
+
+    @media screen and (max-width: 767px) {
+      padding: 1rem 2.5rem 1.5rem;
+      max-width: 150px;
+    }
+
+    @media screen and (max-width: 414px) {
+      max-width: 200px;
+      font-size: 6cqw;
+    }
+  }
+
   &__buttons {
     display: flex;
     gap: 30px;
